# i3ws

./: 2  Cargo.toml  README.md  default.toml  has_open_window.sh  install.sh
src/: app.rs  commands.rs  config.rs  json.rs  lib.rs  main.rs  workspace.rs
src/app/: error.rs  handlers.rs  matches.rs  mod.rs
src/commands/: mod.rs  query.rs  workspace.rs
src/config/: config_file.rs  default.rs  mod.rs  structs.rs
src/workspace/: mod.rs
~/.config/i3ws/: i3ws.conf
